fix scrollbar visibility

--- a/css/index.css
+++ b/css/index.css
@@ -268,6 +268,8 @@ i {
     height: auto;
     margin: auto;
     text-align: center;
+    overflow-y: visible;
+    overflow-x: hidden;
 }
 
 #current-tab {
@@ -290,6 +292,8 @@ i {
 }
 
 #tab > i {
+    overflow-y: visible;
+    overflow-x: hidden;
     display: inline-block;
     position: relative;
     width: auto;
@@ -298,6 +302,4 @@ i {
     color: rgba(20,20,20,0.6);
     font-size: 14px;
 }
-
-
 
